<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basePrecios">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/basePrecios"
            android:textSize="35dp"
            android:id="@+id/basePrecios"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryLight"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"/>

        <Button
            android:id="@+id/btn_GUARDAR"
            android:layout_width="331dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/GoogleSheet"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25dp"
            />

        <Button
            android:id="@+id/btn_LEER"
            android:layout_width="331dp"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/bordes_redondos"
            android:text="@string/leerGoogleSheet"
            android:textColor="@color/colorPrimaryText"
            android:textSize="25dp"
            />

    </LinearLayout>

</RelativeLayout>